# pyJockie

./: .gitignore  CLAUDE.md  Makefile  README.md  app.py  docker-compose.yml  patch-py2app.py  pyproject.toml  setup.py
bot/: Dockerfile  audio.py  bot.py  config.py  main.py  requirements.txt  state.py
docs/plans/: 2026-02-13-macos-app-design.md  2026-02-13-macos-app-implementation.md
pyJockie.icon/: icon.json
resources/: Assets.car  icon.icns  pyJockie.icns
scripts/: build-app.sh  local-bot.sh  local-librespot.sh
