[project]
name = "pyjockie"
version = "0.1.0"
description = "macOS menu bar app that streams Spotify audio into Discord voice channels"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12,<3.13"

# Runtime deps live in [dependency-groups] instead of here because py2app
# rejects install_requires (which setuptools generates from dependencies).
dependencies = []

[dependency-groups]
runtime = [
    "discord.py[voice]>=2.3.0",
    "PyNaCl>=1.5.0",
    "aiohttp>=3.9.0",
    "rumps>=0.4.0",
]
build = [
    {include-group = "runtime"},
    "py2app>=0.28.0",
    "setuptools",
]
dev = [
    {include-group = "build"},
    "pillow",
]

[tool.uv]
default-groups = ["dev"]
